# cgtool

./: README.md  pyproject.toml
cgtool/: __init__.py  cgtypes.py  gui.py  match.py  requirements.txt
cgtool/cgtool/: __init__.py  __main__.py  cli.py  imageops.py  match.py  pipeline.py  pyproject.toml  requirements.txt  types.py
src/: __main__.py
src/cgtool/: __main__.py  imageops.py  pipeline.py
