[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cgtool"
version = "1.0.0"
description = "CG Image Auto-Matching, Background Removal, and Alignment Tool"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "starfield17", email = "minakami720yuki@gmail.com"}
]
keywords = ["cg", "image", "alignment",  "差分"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Graphics",
]
dependencies = [
    "click>=8.0",
    "numpy>=1.20",
    "Pillow>=9.0",
    "scipy>=1.7",
    "tqdm>=4.60",
]

[project.optional-dependencies]
fast = [
    "numba>=0.56",
]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "black",
    "ruff",
    "numba>=0.56",
]

[project.scripts]
cgtool = "cgtool.cli:main"

[project.urls]
Homepage = "https://github.com/starfield17/cgtool"
Documentation = "https://github.com/starfield17/cgtool#readme"
Repository = "https://github.com/starfield17/cgtool.git"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.black]
line-length = 100
target-version = ['py39']

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I", "UP"]
ignore = ["E501"]
